<resources>
    <string name="about_me">About Me</string>
    <string name="abbrev_friday">FRI</string>
    <string name="abbrev_monday">MON</string>
    <string name="abbrev_saturday">SAT</string>
    <string name="abbrev_sunday">SUN</string>
    <string name="abbrev_tuesday">TUES</string>
    <string name="abbrev_thursday">THURS</string>
    <string name="abbrev_wednesday">WED</string>
    <string name="alert_wait">Please wait...</string>
    <string name="app_name">Ryde</string>
    <string name="action_settings">Settings</string>
    <string name="depart_from">Depart From Destination</string>
    <string name="depart_to">Depart To Destination</string>
    <string name="discoverable">Is Discoverable</string>
    <string name="driver">Driver</string>
    <string name="dropoff">Dropoff</string>
    <string name="edit">Edit</string>
    <string name="email">Email</string>
    <string name="err_fields_empty">Please fill all the fields.</string>
    <string name="err_login">Error occurred while login:</string>
    <string name="err_signup">Error occurred during signup:</string>
    <string name="group_description">Group Description:</string>
    <string name="group_title">Group Title</string>
    <string name="login">Login</string>
    <string name="members">Members</string>
    <string name="my_groups">My Groups</string>
    <string name="my_profile">My Profile</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="pickup">Pickup</string>
    <string name="pickup_and_dropoff">Pickup and Dropoff Locations</string>
    <string name="save">Save</string>
    <string name="set_location">Set Location</string>
    <string name="starting_point">Starting point</string>
    <string name="stub_name">Chris Sun</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_group">GroupActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_group_chat">GroupChatActivity</string>
    <string name="type_msg">Type message</string>
    <string name="username">Username</string>

</resources>
